tests/ui/methods/probe-error-on-infinite-deref.stderr
error[E0055]: reached the recursion limit while auto-dereferencing `Wrap<Wrap<Wrap<Wrap<Wrap<Wrap<Wrap<Wrap<Wrap<Wrap<Wrap<...>>>>>>>>>>>`
  --> $DIR/probe-error-on-infinite-deref.rs:14:13
   |
LL |     Wrap(1).lmao();
   |             ^^^^ deref recursion limit reached
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`probe_error_on_infinite_deref`)
   = note: the full name for the type has been written to '$TEST_BUILD_DIR/probe-error-on-infinite-deref.long-type-$LONG_TYPE_HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console

error[E0599]: no method named `lmao` found for struct `Wrap<{integer}>` in the current scope
  --> $DIR/probe-error-on-infinite-deref.rs:14:13
   |
LL | struct Wrap<T>(T);
   | -------------- method `lmao` not found for this struct
...
LL |     Wrap(1).lmao();
   |             ^^^^ method not found in `Wrap<{integer}>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0055, E0599.
For more information about an error, try `rustc --explain E0055`.
